<resources>
    <string name="app_name">Droid Cafe</string>

    <string name="text_intro">Droid Desserts</string>

    <string name="text_donut">Donuts are glazed and sprinkled with candy.</string>
    <string name="text_froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="text_icecream">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>

    <string name="order_header">Your Order</string>
    <string name="order_label_name">Name</string>
    <string name="order_label_address">Address</string>
    <string name="order_label_phone">Phone</string>
    <string name="order_label_note">Note</string>
    <string name="order_label_delivery">Choose a delivery method</string>

    <string name="intput_name_hint">Enter your name</string>
    <string name="intput_address_hint">Enter your address</string>
    <string name="intput_phone_hint">Enter your phone</string>
    <string name="intput_note_hint">Note for your order</string>

    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>

    <string-array name="labels_phone_type_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_settings_message">Show options</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>

    <string name="action_settings">Settings</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>