<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:orderInCategory="100"
        android:title="@string/action_order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="100"
        android:title="@string/action_status"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_baseline_star_outline_24"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />
</menu>